--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types"
+    ],
     "target": "es2017",
     "skipLibCheck": true,
     "sourceMap": true,
